objects/IndustryMapping__c.object
<CustomObject>
    <description>A mapping of industries from one standard to another (e.g., SIC to NAICS).</description>
    <fields>
        <fullName>Industry1__c</fullName>
        <description>The first industry in the mapping.</description>
        <inlineHelpText>The first industry in the mapping.</inlineHelpText>
        <label>Industry 1</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Industry Code Mappings</relationshipLabel>
        <relationshipName>Industry_Code_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Industry2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The second industry in the mapping.</description>
        <inlineHelpText>The second industry in the mapping.</inlineHelpText>
        <label>Industry 2</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Industry Code Mappings (Industry 2)</relationshipLabel>
        <relationshipName>IndustryCodeMappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IndustryMappingEID__c</fullName>
        <description>The Enterprise ID for this Industry Mapping record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Industry Mapping record.</inlineHelpText>
        <label>Industry Mapping EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Industry Code Mapping</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Industry Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Code Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>